<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/composeView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="1dp"
    tools:showIn="@layout/main"
    tools:context=".activities.MainUIActivity">

    <EditText
        android:id="@+id/tweetComposeEdit"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:cursorVisible="true"
        android:gravity="top"

        android:hint="@string/composeNewTweet"
        android:lines="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/textCount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center_vertical|right|end"
            android:maxLength="140"
            android:text="@string/t140"
            android:textColor="#aaaaaa" />

        <Button
            android:id="@+id/sentTweetButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".3"
            android:text="@string/tweetButtonLabel" />
    </LinearLayout>
</LinearLayout>