<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/viewFlipper" android:layout_gravity="center">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <ProgressBar
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:background="@drawable/borders"
                android:id="@+id/progressBar"/>
        <ListView
                android:layout_width="fill_parent"
                android:scrollingCache="true"
                android:layout_height="fill_parent"
                android:id="@+id/listView">

        </ListView>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:padding="1dp"
            android:layout_height="fill_parent" android:id="@+id/composeView">
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:id="@+id/tweetComposeEdit"
                android:gravity="top"
                android:lines="4"

                android:cursorVisible="true"
                android:hint="@string/composeNewTweet"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="1.0"
                android:layout_height="50dp" android:layout_gravity="center">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/t140"
                    android:maxLength="140"
                    android:gravity="center_vertical|right"
                    android:layout_weight=".7"
                    android:id="@+id/textCount"
                    android:textColor="#aaaaaa"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight=".3"
                    android:text="@string/tweetButtonLabel"
                    android:id="@+id/sentTweetButton"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:weightSum="1.0"
            android:id="@+id/detailedView"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="2dp"
                android:weightSum="1.0"
                android:background="@drawable/borders"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="55dp"
                    android:layout_height="80dp"
                    android:id="@+id/dvImageView" android:layout_gravity="center_vertical|top"
                    android:contentDescription="@string/profileIconText"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:weightSum="1.0"
                    android:layout_height="fill_parent" android:layout_gravity="center">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_blue_light"
                        android:id="@+id/dvUserNameView" android:gravity="center_horizontal|top"
                        android:textSize="26sp"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".3"
                        android:textColor="#c0a24b"
                        android:id="@+id/dvTimeView" android:gravity="center_horizontal|top" android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/secondary_text_dark"
                android:background="@drawable/borders"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:textSize="22sp"
                android:autoLink="all"
                android:id="@+id/dvTweetTextView" android:layout_gravity="center"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="1.0"
                android:background="@drawable/borders"
                android:layout_height="60dp" android:layout_gravity="center">
            <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight=".25"
                    android:text="@string/closeButtonLabel"
                    android:id="@+id/dvCloseButton" android:layout_gravity="center"/>
            <Button
                    android:layout_width="0dp"
                    android:text="@string/replyButtonLabel"
                    android:layout_weight=".25"
                    android:layout_height="fill_parent"
                    android:id="@+id/dvReplyButton" android:layout_gravity="center"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_weight=".25"
                    android:layout_height="fill_parent"
                    android:text="@string/retweetButtonLabel"
                    android:id="@+id/retweetButton" android:layout_gravity="center"/>
            <!--<Button
                    android:layout_width="0dp"
                    android:layout_weight=".25"
                    android:layout_height="fill_parent"
                    android:text="Twitter"
                    android:id="@+id/dvLaunchButton" android:layout_gravity="center"/>-->
        </LinearLayout>


    </LinearLayout>

</ViewFlipper>
