<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailedView"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1.0"
    tools:showIn="@layout/main">
    <!--Header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:background="@drawable/borders"
        android:orientation="horizontal"
        android:padding="2dp"
        android:weightSum="1.0">

        <ImageView
            android:id="@+id/dvImageView"
            android:layout_width="55dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical|top"
            android:contentDescription="@string/profileIconText" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <TextView
                android:id="@+id/dvUserNameView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:gravity="center_horizontal|top"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/dvTimeView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:gravity="center_horizontal|top"
                android:textColor="#c0a24b"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
    <!--Data-->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight=".9"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/dvTweetTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:autoLink="all"
            android:background="@drawable/borders"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="22sp" />

    </ScrollView>

    <!--Footer-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".05"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <Button
            android:id="@+id/dvCloseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".25"
            android:drawableLeft="@drawable/ic_arrow_back_white_24dp"
            android:drawableStart="@drawable/ic_arrow_back_white_24dp"
            android:text="@string/backButtonLabel" />

        <Button
            android:id="@+id/dvReplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".25"
            android:drawableLeft="@drawable/ic_reply_white_24dp"
            android:drawableStart="@drawable/ic_reply_white_24dp"
            android:text="@string/replyButtonLabel" />

        <Button
            android:id="@+id/retweetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".25"
            android:drawableLeft="@drawable/ic_repeat_white_24dp"
            android:drawableStart="@drawable/ic_repeat_white_24dp"
            android:text="@string/retweetButtonLabel" />
    </LinearLayout>

</LinearLayout>